// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Utm /> Component render. Component props testing Should Utm component render with default props 1`] = `
<div
  className="col-6 default-indicator"
>
  <label
    className="font-weight-bold mt-3"
    htmlFor="special-device1"
  >
    Источник компании
  </label>
  <div
    className="input-group mb-2"
  >
    <div
      className="input-group-prepend"
    >
      <span
        className="input-group-text"
        id="inputGroup-sizing-default"
      >
        utm_source
          
        <a
          className="text-dark myPopover"
          data-container="body"
          data-content="Дефолтный текст"
          data-placement="right"
          data-toggle="popover"
          data-trigger="click"
          href="#"
          role="button"
          title="Дефолтный заголовок"
        >
          <svg
            className="bi bi-question-circle-fill d-block"
            fill="currentColor"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.496 6.033a.237.237 0 0 1-.24-.247C5.35 4.091 6.737 3.5 8.005 3.5c1.396 0 2.672.73 2.672 2.24 0 1.08-.635 1.594-1.244 2.057-.737.559-1.01.768-1.01 1.486v.105a.25.25 0 0 1-.25.25h-.81a.25.25 0 0 1-.25-.246l-.004-.217c-.038-.927.495-1.498 1.168-1.987.59-.444.965-.736.965-1.371 0-.825-.628-1.168-1.314-1.168-.803 0-1.253.478-1.342 1.134-.018.137-.128.25-.266.25h-.825zm2.325 6.443c-.584 0-1.009-.394-1.009-.927 0-.552.425-.94 1.01-.94.609 0 1.028.388 1.028.94 0 .533-.42.927-1.029.927z"
              fillRule="evenodd"
            />
          </svg>
        </a>
      </span>
    </div>
    <input
      aria-describedby="inputGroup-sizing-default"
      aria-label="Sizing example input"
      className="form-control"
      id="special-device1"
      onChange={[Function]}
      placeholder="Плейсхолдер..."
      type="text"
      value="Дефолтное значение"
    />
  </div>
  <small
    className="form-text text-muted"
  >
    Дефолтная подсказка
  </small>
</div>
`;

exports[`<Utm /> Component render. Component props testing Should Utm component render with test props 1`] = `
<div
  className="col-6 test-indicator"
>
  <label
    className="font-weight-bold mt-3"
    htmlFor="special-test-device7"
  >
    Тестовый заголовок поля
  </label>
  <div
    className="input-group mb-2"
  >
    <div
      className="input-group-prepend"
    >
      <span
        className="input-group-text"
        id="inputGroup-sizing-default"
      >
        utm_test
          
        <a
          className="text-dark myPopover"
          data-container="body"
          data-content="Тестовый текст поповера"
          data-placement="right"
          data-toggle="popover"
          data-trigger="click"
          href="#"
          role="button"
          title="Тестовый заголовок поповера"
        >
          <svg
            className="bi bi-question-circle-fill d-block"
            fill="currentColor"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.496 6.033a.237.237 0 0 1-.24-.247C5.35 4.091 6.737 3.5 8.005 3.5c1.396 0 2.672.73 2.672 2.24 0 1.08-.635 1.594-1.244 2.057-.737.559-1.01.768-1.01 1.486v.105a.25.25 0 0 1-.25.25h-.81a.25.25 0 0 1-.25-.246l-.004-.217c-.038-.927.495-1.498 1.168-1.987.59-.444.965-.736.965-1.371 0-.825-.628-1.168-1.314-1.168-.803 0-1.253.478-1.342 1.134-.018.137-.128.25-.266.25h-.825zm2.325 6.443c-.584 0-1.009-.394-1.009-.927 0-.552.425-.94 1.01-.94.609 0 1.028.388 1.028.94 0 .533-.42.927-1.029.927z"
              fillRule="evenodd"
            />
          </svg>
        </a>
      </span>
    </div>
    <input
      aria-describedby="inputGroup-sizing-default"
      aria-label="Sizing example input"
      className="form-control"
      id="special-test-device7"
      onChange={[Function]}
      placeholder="Тестовый плейсхолдер..."
      type="text"
      value="Тестовое значение"
    />
  </div>
  <small
    className="form-text text-muted"
  >
    Тестовая подсказка
  </small>
</div>
`;
